--- a/digitalhousecssstandar.css
+++ b/digitalhousecssstandar.css
@@ -30,6 +30,24 @@ p {
   text-align: justify;
 }
 
+.responsive-iframe {
+  width: 100%;
+  height: 100vh;
+  border: none;
+}
+.iframe-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+.zoom-container {
+  transform-origin: 0 0;
+  transform: scale(0.25); /* Aplicar zoom del 25% */
+  width: 400%;
+  height: 400%;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   body {
