--- a/digitalhousecssstandar.css
+++ b/digitalhousecssstandar.css
@@ -43,6 +43,22 @@ p {
   border: none;
 }
 
+/* *******Posicion y tamaño de videos******* */
+.video-block__content {
+  padding: 80% 0 0 0 !important;
+  position: relative !important;
+}
+
+.video-block__content iframe {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/* ******************************** */
+
 /* Media Queries */
 @media (max-width: 768px) {
   body {
@@ -106,20 +122,5 @@ p {
   .container {
     max-width: 70%;
   }
-
-  .video-block__content {
-    padding: 80% 0 0 0 !important;
-    position: relative !important;
-  }
-
-  .video-block__content iframe {
-    position: absolute !important;
-    top: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-  }
-
-
 
 }
